Apply ESLint for browser compatabilty

--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
   "author": "Gavin Rough <gavin@grough.com>",
   "main": "pixel-animator.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "eslint"
   },
   "files": [
     "pixel-animator.js",
     "pixel-animator.css",
     "example.html"
+  ],
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not Safari 5.1",
+    "maintained node versions"
   ],
   "keywords": [
     "animation",
@@ -24,6 +31,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-plugin-compat": "^3.3.0",
     "jest": "^24.9.0"
   }
 }
