--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixel-animator",
-  "version": "1.1.3",
-  "description": "Make generative pixel animations in your web browser",
+  "version": "1.1.4",
+  "description": "Make generative pixel art in your browser",
   "repository": {
     "type": "git",
     "url": "https://github.com/grough/pixel-animator"
@@ -9,12 +9,12 @@
   "author": "Gavin Rough <gavin@grough.com>",
   "main": "pixel-animator.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start": "http-server"
   },
   "files": [
     "pixel-animator.js",
-    "pixel-animator.css",
-    "example.html"
+    "index.html"
   ],
   "keywords": [
     "animation",
@@ -24,6 +24,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "http-server": "^0.12.0",
     "jest": "^24.9.0"
   }
 }
