--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixel-animator",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Make generative pixel art in your browser",
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "animation",
     "pixel art",
     "generative art",
+    "procedural art",
     "cellular automata"
   ],
   "license": "MIT",
