--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "pixel-animator",
-  "version": "1.1.10",
+  "version": "1.1.13",
   "description": "Make generative pixel art in your browser",
   "repository": {
     "type": "git",
     "url": "https://github.com/grough/pixel-animator"
   },
   "author": "Gavin Rough <gavin@grough.com>",
-  "main": "umd/main.js",
+  "main": "main.js",
   "scripts": {
     "test": "jest src/**/*.js --runInBand --watchAll",
     "build": "rollup --config rollup.config.js",
     "lint": "eslint --fix src/**/*.js",
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write src/**/*.js",
+    "publish": "npm build && npm publish"
   },
   "files": [
-    "umd"
+    "main.js",
+    "extra.js"
   ],
   "license": "MIT",
   "devDependencies": {
