--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixel-animator",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "description": "Make generative pixel art in your browser",
   "repository": {
     "type": "git",
@@ -12,8 +12,7 @@
     "test": "jest src/**/*.js --runInBand --watchAll",
     "build": "rollup --config rollup.config.js",
     "lint": "eslint --fix src/**/*.js",
-    "format": "prettier --write src/**/*.js",
-    "publish": "npm build && npm publish"
+    "format": "prettier --write src/**/*.js"
   },
   "files": [
     "main.js",
@@ -21,15 +20,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.8.0",
-    "husky": "^4.2.1",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "rollup": "^1.29.0",
-    "rollup-plugin-babel": "^4.3.3"
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "babel-jest": "^26.1.0",
+    "eslint": "^7.3.1",
+    "husky": "^4.2.5",
+    "jest": "^26.1.0",
+    "prettier": "^2.0.5",
+    "rollup": "^2.18.0",
+    "rollup-plugin-babel": "^4.4.0"
   },
   "babel": {
     "presets": [
@@ -55,13 +54,11 @@
     }
   },
   "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all",
-    "printWidth": 80
+    "trailingComma": "all"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format && yarn lint"
+      "pre-commit": "npm run format && npm run lint"
     }
   },
   "keywords": [
